style: minor changes in style

--- a/views/clients.hbs
+++ b/views/clients.hbs
@@ -9,6 +9,7 @@
 </head>
 <body>
 <main class="main-all">
+    <p class="back"><a href="/" class='button-back'>Главная форма</a></p>
 <h1>Список клиентов мастерской "Компьютерный доктор"</h1>
     <p class="add"><a href="/create" class='button-add'>Добавить клиента</a></p>
 <table  class="table-all">
