--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,15 +9,41 @@
 
 </head>
 <body>
-
 <main class="main-start">
-    <div>
-        <p><a class='button' href="/masters">Мастера</a></p>
-        <p><a class='button' href="/clients">Клиенты</a></p>
+    <div class="title-logo">
+     <a class="" href="http://localhost:63342/PC_app/index.html" target="_blank">веб-сайт</a>
+        <h1>					&#8886; Работа с Базой Данных 				&#8887; </h1>
+        <img src="/assets/images/logo_blue.png" alt="Logo"/>
     </div>
-    <div>
-        <p><a class='button' href="/services">Услуги</a></p>
-    <p><a class='button' href="/orders">Заказы</a></p>
+    <div class="control">
+        <div>
+            <p>	&#9196; Справочники 	</p>
+            <p><a class='button' href="/masters">Мастера</a></p>
+            <p><a class='button' href="/clients">Клиенты</a></p>
+            <p><a class='button' href="/services">Услуги</a></p>
+            <p><a class='button' href="/specializations">Участки</a></p>
+            <p><a class='button' href="/orders">Заказы</a></p>
+        </div>
+        <div class="reports">
+            <p> 	&#9196; Отчеты 	 </p>
+            <p>
+                <a class='button' href="#">Заказы <br>в работе</a>
+                <a class='button' href="#">Неоплаченные <br>заказы</a>
+            </p>
+            <p>
+                <a class='button' href="#">Загрузка <br>участков</a>
+                <a class='button' href="#">Загрузка <br>мастеров</a>
+            </p>
+            <p>
+                <a class='button' href="#">Прайс-лист <br>&nbsp;</a>
+                <a class='button' href="#">Популярность <br>услуг</a>
+            </p>
+            <p>
+                <a class='button' href="#">Вип-клиенты</a>
+                <a class='button' href="#">Сводка <br>по скидкам</a>
+            </p>
+
+        </div>
     </div>
 </main>
 
