--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@
 
 .main {
     font-size: 20px;
-    background: url(../assets/images/background/pc.jpg) repeat 100% 0;
+    background: url(../assets/images/background/main.jpg) repeat 100% 0;
     background-size: cover;
     flex-grow: 1;
     display: flex;
@@ -251,14 +251,16 @@
 
 .help-pic {
     width: 100px;
-    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .help figcaption {
     font-family: Pattaya-Regular, serif;
     font-size: 30px;
     color: #3c4a5a;
+    flex-grow: 1;
     align-self: center;
+    text-align: center;
 }
 
 .offer {
