--- a/views/masters.hbs
+++ b/views/masters.hbs
@@ -9,8 +9,9 @@
 </head>
 <body>
 <main class="main-all">
+    <p class="back"><a href="/" class='button-back'>Главная форма</a></p>
 <h1>Мастера мастерской "Компьютерный доктор"</h1>
-    <p class="add"><a href="/create" class='button-add'>Добавить мастера</a></p>
+    <p class="add"><a href="/create_master" class='button-add'>Добавить мастера</a></p>
 <table class="table-all">
     <tr><th>Номер</th><th>ФИО</th><th>Адрес</th><th>Телефон</th><th>э-мейл</th><th>код специализации</th></tr>
     {{#each masters}}
@@ -19,7 +20,7 @@
             <td>{{this.name_master}}</td>
             <td>{{this.adress}}</td>
             <td>{{this.phone}}</td>
-            <td>{{this.e-mail}}</td>
+            <td>{{this.email}}</td>
             <td>{{this.id_specialization}}</td>
             <td>
                 <a class='button-change' href="/edit/{{this.id_master}}">изменить</a>
