--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -9,6 +9,7 @@
 </head>
 <body>
 <main class="main-all">
+    <p class="back"><a href="/" class='button-back'>Главная форма</a></p>
 <h1>Список заказов мастерской "Компьютерный доктор"</h1>
 <p class="add"><a href="/create" class='button-add'>Добавить заказ</a></p>
 
