--- a/views/services.hbs
+++ b/views/services.hbs
@@ -10,6 +10,7 @@
 </head>
 <body>
 <main class="main-all">
+    <p class="back"><a href="/" class='button-back'>Главная форма</a></p>
 <h1>Услуги мастерской "Компьютерный доктор"</h1>
 <p class="add"><a href="/create" class='button-add'>Добавить услугу</a></p>
 
@@ -33,4 +34,4 @@
 
 </main>
 </body>
-<html>
+</html>
