--- a/css/style-about.css
+++ b/css/style-about.css
@@ -67,11 +67,11 @@
 }
 
 
-.workers-first-row figure:first-child img {
-    background: rgba(70, 95, 250, 0.6);
+.director-img img {
+    background: rgba(43, 77, 250, 0.6);
 }
 
-.workers-first-row figure:first-child img:hover {
+.director-img img:hover {
     background-image: url("../assets/images/about/director_back.jpg");
     background-size: cover;
 }
@@ -281,4 +281,93 @@
     -webkit-box-shadow: inset 3px 3px 10px #7d8e8f;
     box-shadow: inset 3px 3px 10px #7d8e8f;
     padding: 20px;
+}
+
+/* Базовые стили слоя затемнения и модального окна  */
+
+.overlay {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.65); /* фон затемнения */
+    position: fixed; /* фиксированное позиционирование */
+    cursor: default; /* тип курсара */
+}
+
+.overlay:target {
+    display: block; /* активация слоя затемнения */
+}
+
+/* стили модального окна */
+.popup {
+    top: -100%;
+    right: 0;
+    left: 50%;
+    font-size: 18px;
+    font-weight: normal;
+    text-align: justify;
+    z-index: 20;
+    margin: 0;
+    width: 85%;
+    min-width: 320px;
+    max-width: 600px;
+    position: fixed;  /* фиксированное позиционирование, окно стабильно при прокрутке */
+    padding: 15px;
+    border: 1px solid #383838;
+    background: rgba(216, 227, 238, 0.8) url(../assets/images/background/vintage-concrete.png) repeat 100% 0;
+    /* скругление углов */
+    border-radius: 10px;
+    /* внешняя тень */
+    box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
+    transform: translate(-50%, -500%);
+    transition: transform 0.6s ease-out;
+}
+
+/* активация модального блока */
+.overlay:target+.popup {
+    transform: translate(-50%, 0);
+    top: 20%;
+}
+
+/* кнопка закрытия */
+.close {
+    top: -10px;
+    right: -10px;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    padding: 0;
+    border: 2px solid #ccc;
+    border-radius: 15px;
+    background-color: rgba(61, 61, 61, 0.8);
+    box-shadow: 0 0 10px #000;
+    text-align: center;
+    text-decoration: none;
+    font: 13px/20px 'Tahoma', Arial, sans-serif;
+    font-weight: bold;
+    transition: all ease .8s;
+}
+.close:before {
+    color: rgba(255, 255, 255, 0.9);
+    content: "X";
+    text-shadow: 0 -1px rgba(0, 0, 0, 0.9);
+    font-size: 12px;
+}
+.close:hover {
+    background-color: rgba(252, 20, 0, 0.8);
+    transform: rotate(360deg);
+}
+
+/* параграфы */
+.popup p {
+    padding: 3px 0;
+    text-indent: 25px;
+}
+.popup p:first-child {
+    padding-bottom: 10px;
+    font-weight: bold;
+    text-align: center;
 }
