--- a/views/masters.hbs
+++ b/views/masters.hbs
@@ -11,9 +11,9 @@
 <main class="main-all">
     <p class="back"><a href="/" class='button-back'>Главная форма</a></p>
 <h1>Мастера мастерской "Компьютерный доктор"</h1>
-    <p class="add"><a href="/create_master" class='button-add'>Добавить мастера</a></p>
+    <p class="add"><a href="/create_master" class='button-add'>Добавить</a></p>
 <table class="table-all">
-    <tr><th>Номер</th><th>ФИО</th><th>Адрес</th><th>Телефон</th><th>э-мейл</th><th>код специализации</th></tr>
+    <tr><th>Код</th><th>ФИО</th><th>Адрес</th><th>Телефон</th><th>Э-мейл</th><th>Код специализации</th></tr>
     {{#each masters}}
         <tr>
             <td>{{this.id_master}}</td>
