--- a/views/create_master.hbs
+++ b/views/create_master.hbs
@@ -11,8 +11,8 @@
     <h1>Добавление Мастера</h1>
 
     <div class="links">
-        <a href="/masters" class="links-item">к списку мастеров</a>
-        <a href="/" class="links-item">на главную форму</a>
+        <a href="/masters" class="links-item">список мастеров</a>
+        <a href="/" class="links-item">главная форма</a>
     </div>
     <form class='form-create' method="POST">
         <p>
