--- a/views/services.hbs
+++ b/views/services.hbs
@@ -12,10 +12,10 @@
 <main class="main-all">
     <p class="back"><a href="/" class='button-back'>Главная форма</a></p>
 <h1>Услуги мастерской "Компьютерный доктор"</h1>
-<p class="add"><a href="/create" class='button-add'>Добавить услугу</a></p>
+<p class="add"><a href="/create" class='button-add'>Добавить</a></p>
 
 <table class="table-all">
-    <tr><th>Номер</th><th>Услуга</th><th>Цена (бел.р.)</th><th>Гарантия (мес.)</th></tr>
+    <tr><th>Код</th><th>Услуга</th><th>Цена (бел.р.)</th><th>Гарантия (мес.)</th></tr>
     {{#each services}}
         <tr>
             <td>{{this.id_service}}</td>
