--- a/views/clients.hbs
+++ b/views/clients.hbs
@@ -11,7 +11,7 @@
 <main class="main-all">
     <p class="back"><a href="/" class='button-back'>Главная форма</a></p>
 <h1>Клиенты мастерской "Компьютерный доктор"</h1>
-    <p class="add"><a href="/create" class='button-add'>Добавить</a></p>
+    <p class="add"><a href="/create_client" class='button-add'>Добавить</a></p>
 <table  class="table-all">
     <tr><th>Код</th><th>ФИО</th><th>Адрес</th><th>Телефон</th><th>э-мейл</th><th>Вип</th></tr>
     {{#each clients}}
@@ -20,7 +20,7 @@
             <td>{{this.name_client}}</td>
             <td>{{this.adress}}</td>
             <td>{{this.phone}}</td>
-            <td>{{this.e-mail}}</td>
+            <td>{{this.email}}</td>
             <td>{{this.vip}}</td>
             <td>
                 <a class='button-change' href="/edit/{{this.id_client}}">изменить</a>
