--- a/views/create_master.hbs
+++ b/views/create_master.hbs
@@ -16,7 +16,7 @@
     </div>
     <form class='form-create' method="POST">
         <p>
-            <label for="name" size="25">Имя</label>
+            <label for="name">ФИО</label>
             <input name="name" id="name"/>
         </p>
         <p>
@@ -34,7 +34,7 @@
         <p>
             <label for="specialization"><a href="/specializations" class ='id-link' title='Для просмотра списка специализаций пройдите по ссылке' target="_blank">Специализация</a></label>
             <input name="specialization" type="number" id="specialization" min="1" max="2"/>
-         </p>
+        </p>
         <p>
             <input type="submit" value="Добавить" class="submit"/>
         </p>
