--- a/views/services.hbs
+++ b/views/services.hbs
@@ -12,7 +12,7 @@
 <main class="main-all">
     <p class="back"><a href="/" class='button-back'>Главная форма</a></p>
 <h1>Услуги мастерской "Компьютерный доктор"</h1>
-<p class="add"><a href="/create" class='button-add'>Добавить</a></p>
+<p class="add"><a href="/create_service" class='button-add'>Добавить</a></p>
 
 <table class="table-all">
     <tr><th>Код</th><th>Услуга</th><th>Цена (бел.р.)</th><th>Гарантия (мес.)</th></tr>
