--- a/views/masters.hbs
+++ b/views/masters.hbs
@@ -24,7 +24,7 @@
             <td>{{this.id_specialization}}</td>
             <td>
                 <a class='button-change' href="/edit/{{this.id_master}}">изменить</a>
-                <form action="delete/{{this.id_master}}" method="POST">
+                <form action="delete_master/{{this.id_master}}" method="POST">
                     <input class="delete-all" type="submit" value="удалить" />
                 </form>
             </td>
