--- a/views/services.hbs
+++ b/views/services.hbs
@@ -24,7 +24,7 @@
             <td>{{this.guarantee}}</td>
             <td>
                 <a class='button-change' href="/edit/{{this.id_service}}">изменить</a>
-                <form action="delete/{{this.id_service}}" method="POST">
+                <form action="delete_service/{{this.id_service}}" method="POST">
                     <input class="delete-all" type="submit" value="удалить" />
                 </form>
             </td>
