--- a/views/clients.hbs
+++ b/views/clients.hbs
@@ -24,6 +24,9 @@
             <td>{{this.vip}}</td>
             <td>
                 <a class='button-change' href="/edit/{{this.id_client}}">изменить</a>
+                <form action="delete_client/{{this.id_client}}" method="POST">
+                    <input class="delete-all" type="submit" value="удалить" />
+                </form>
             </td>
         </tr>
     {{/each}}
