--- a/views/create_master.hbs
+++ b/views/create_master.hbs
@@ -33,7 +33,7 @@
         </p>
         <p>
             <label for="specialization"><a href="/specializations" class ='id-link' title='Для просмотра списка специализаций пройдите по ссылке' target="_blank">Специализация</a></label>
-            <input name="specialization" type="number" id="specialization" required min="1" max="3"/>
+            <input name="specialization" type="number" id="specialization" required minlength="1" maxlength="1"/>
         </p>
         <p>
             <input type="submit" value="Добавить" class="submit"/>
