feat: add create view and function for orders

--- a/views/masters.hbs
+++ b/views/masters.hbs
@@ -13,7 +13,7 @@
 <h1>Мастера мастерской "Компьютерный доктор"</h1>
     <p class="add"><a href="/create_master" class='button-add'>Добавить</a></p>
 <table class="table-all">
-    <tr><th>Код</th><th>ФИО</th><th>Адрес</th><th>Телефон</th><th>Э-мейл</th><th>Код специализации</th></tr>
+    <tr><th>Код</th><th>ФИО</th><th>Адрес</th><th>Телефон</th><th>Э-мейл</th><th>Код спец.</th></tr>
     {{#each masters}}
         <tr>
             <td>{{this.id_master}}</td>
