--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -2,43 +2,55 @@
 <html>
 <head>
     <title>Заказы</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet"  type = "text/css" href="css/style_hbs.css">
-    <link rel="stylesheet" type = "text/css" href="css/reset.css">
-    <link rel="stylesheet" type = "text/css" href="css/fonts.css">
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" type="text/css" href="css/style_hbs.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/fonts.css">
 </head>
 <body>
 <main class="main-all">
     <p class="back"><a href="/" class='button-back'>Главная форма</a></p>
-<h1>Заказы мастерской "Компьютерный доктор"</h1>
-<p class="add"><a href="/create_order" class='button-add'>Добавить</a></p>
+    <h1>Заказы мастерской "Компьютерный доктор"</h1>
+    <p class="add"><a href="/create_order" class='button-add'>Добавить</a></p>
 
-<table class="table-all">
-    <tr><th>Номер</th><th>Дата заказа</th><th>Техника</th><th>Дата выполнения</th><th>Оплачено</th>
-        <th>Выдано</th><th>К оплате</th><th>Комметарии</th><th>Код кл.</th>
-        <th>Код мас.</th><th>Код усл.</th></tr>
-    {{#each orders}}
+    <table class="table-all">
         <tr>
-            <td>{{this.id_order}}</td>
-            <td>{{this.date_order}}</td>
-            <td>{{this.name_device}}</td>
-            <td>{{this.date_finish}}</td>
-            <td>{{this.paid}}</td>
-            <td>{{this.returned}}</td>
-            <td>{{this.price_final}}</td>
-            <td>{{this.comments}}</td>
-            <td>{{this.id_client}}</td>
-            <td>{{this.id_master}}</td>
-            <td>{{this.id_service}}</td>
-            <td>
-                <a class='button-change' href="/edit/{{this.id_order}}">изменить</a>
-                <form action="delete_order/{{this.id_order}}" method="POST">
-                    <input class="delete-all" type="submit" value="удалить" />
-                </form>
-            </td>
+            <th>Номер</th>
+            <th>Дата заказа</th>
+            <th>Техника</th>
+            <th>Дата выполнения</th>
+            <th>Оплач.</th>
+            <th>Выдано</th>
+            <th>К оплате</th>
+            <th>Доп. инф.</th>
+            <th>Клиент</th>
+            <th>Мастер</th>
+            <th>Услуга</th>
         </tr>
-    {{/each}}
-</table>
+        {{#each orders}}
+            <tr>
+                <td>{{this.id_order}}</td>
+                <td>{{this.date_order}}</td>
+                <td>{{this.name_device}}</td>
+                <td>{{this.date_finish}}</td>
+                <td>{{this.paid}}</td>
+                <td>{{this.returned}}</td>
+                <td>{{this.price_final}}</td>
+                <td>{{this.comments}}</td>
+                <td>{{this.name_client}}</td>
+                <td>{{this.name_master}}</td>
+                <td>{{this.name_service}}</td>
+                <td>
+                    <p><a class='button-change' href="/edit/{{this.id_order}}">изменить</a></p>
+                    <div>
+                        <form action="delete_order/{{this.id_order}}" method="POST">
+                            <input class="delete-all" type="submit" value="удалить"/>
+                        </form>
+                    </div>
+                </td>
+            </tr>
+        {{/each}}
+    </table>
 </main>
 </body>
 </html>
