--- a/views/clients.hbs
+++ b/views/clients.hbs
@@ -30,7 +30,7 @@
                 <td>{{this.email}}</td>
                 <td>{{this.vip}}</td>
                 <td>
-                    <p><a class='button-change' href="/edit/{{this.id_client}}">изменить</a></p>
+                    <p><a class='button-change' href="/edit_client/{{this.id_client}}">изменить</a></p>
                     <div>
                         <form action="delete_client/{{this.id_client}}" method="POST">
                             <input class="delete-all" type="submit" value="удалить"/>
