--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -41,7 +41,7 @@
                 <td>{{this.name_master}}</td>
                 <td>{{this.name_service}}</td>
                 <td>
-                    <p><a class='button-change' href="/edit/{{this.id_order}}">изменить</a></p>
+                    <p><a class='button-change' href="/edit_order/{{this.id_order}}">изменить</a></p>
                     <div>
                         <form action="delete_order/{{this.id_order}}" method="POST">
                             <input class="delete-all" type="submit" value="удалить"/>
