--- a/views/services.hbs
+++ b/views/services.hbs
@@ -28,7 +28,7 @@
                 <td>{{this.price}}</td>
                 <td>{{this.guarantee}}</td>
                 <td>
-                    <p><a class='button-change' href="/edit/{{this.id_service}}">изменить</a></p>
+                    <p><a class='button-change' href="/edit_service/{{this.id_service}}">изменить</a></p>
                     <div>
                         <form action="delete_service/{{this.id_service}}" method="POST">
                             <input class="delete-all" type="submit" value="удалить"/>
