feat: add Views for online-order with function add data to table online_orders

--- a/css/style-order.css
+++ b/css/style-order.css
@@ -1,7 +1,8 @@
 .main-order {
     background: url(../assets/images/background/order.jpg) no-repeat 100% 0;
     background-size: cover;
-    padding: 36px;
+    height: 91.9vh;
+    min-height: max-content;
 }
 
 .contact-form {
