--- a/css/style-auth.css
+++ b/css/style-auth.css
@@ -1,11 +1,15 @@
 .main-auth {
     background: url(../assets/images/background/key.jpg);
     background-size: cover;
-    padding: 10% 20%;
     font-weight: bold;
     font-size: 25px;
     color: #11102f;
     text-shadow: 0 0 #cbf9f7, 0 1px #f2f9d7, 2px 0 #dff9e5, 0 -1px #8b9177;
+    height: 91.9vh;
+    min-height: max-content;
+}
+.main-auth .contact-form {
+    padding: 10% 20%;
 }
 
 .main-auth table {
