--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,8 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    min-height: max-content;
 }
 
 .help {
