--- a/views/auth.hbs
+++ b/views/auth.hbs
@@ -31,7 +31,7 @@
                 <li class="nav-item"><a href="http://localhost:63342/PC_app/index.html"><span> Главная </span></a></li>
                 <li class="nav-item"><a href="http://localhost:63342/PC_app/pages/about.html"><span> О нас </span></a></li>
                 <li class="nav-item"><a href="http://localhost:63342/PC_app/pages/services.html"><span> Услуги </span></a></li>
-                <li class="nav-item"><a href="http://localhost:63342/PC_app/pages/order.html"><span> Заказать </span></a></li>
+                <li class="nav-item"><a href="/order_online"><span> Заказать </span></a></li>
             </ul>
         </div>
 
@@ -40,7 +40,6 @@
     <div class="central">
 
         <main class="main main-order main-auth">
-
              <table>
                  <!--Удалить после отладки-->
                 <tr>
