--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,8 @@
 <body>
 <main class="main-start">
     <div class="title-logo">
-     <a class="" href="http://localhost:63342/PC_app/index.html" target="_blank">веб-сайт</a>
+     <a href="http://localhost:63342/PC_app/index.html" target="_blank">Веб-сайт</a>
+        <a href="/orders_online_list" target="_blank">Онлайн заявки</a>
         <h1>					&#8886; Работа с Базой Данных 				&#8887; </h1>
         <img src="/assets/images/logo_blue.png" alt="Logo"/>
     </div>
