--- a/views/order_online.hbs
+++ b/views/order_online.hbs
@@ -59,11 +59,11 @@
                     </li>
                     <li>
                         <label for="title">Тема:</label>
-                        <input name="title" type="text" id="title" placeholder="Не включается ноутбук" required />
+                        <input name="title" type="text" id="title" placeholder="Не включается ноутбук" required maxlength="100"/>
                     </li>
                     <li>
                         <label for="message">Описание проблемы:</label>
-                        <textarea name="message" id="message" cols="40" rows="6" placeholder="..." required ></textarea>
+                        <textarea name="message" id="message" cols="40" rows="6" placeholder="..." required maxlength="500"></textarea>
                     </li>
                     <li>
                         <button class="submit" type="submit">Отправить</button>
