--- a/views/edit_master.hbs
+++ b/views/edit_master.hbs
@@ -11,7 +11,7 @@
     <h1>Редактирование Мастера</h1>
 
     <div class="links">
-        <a href="/masters" class="links-item">список участков</a>
+        <a href="/masters" class="links-item">список мастеров</a>
         <a href="/" class="links-item">главная форма</a>
     </div>
     <form class='form-create' action="/edit_master" method="POST">
