--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,20 +28,20 @@
         <div class="reports">
             <p> 	&#9196; Отчеты 	 </p>
             <p>
-                <a class='button' href="#">Заказы <br>в работе</a>
-                <a class='button' href="#">Неоплаченные <br>заказы</a>
+                <a class='button' href="/report_not_finished">Заказы <br>в работе</a>
+                <a class='button' href="/report_not_paid">Неоплаченные <br>заказы</a>
             </p>
             <p>
-                <a class='button' href="#">Загрузка <br>участков</a>
-                <a class='button' href="#">Загрузка <br>мастеров</a>
+                <a class='button' href="/report_spec_total">Загрузка <br>участков</a>
+                <a class='button' href="/report_masters_busy">Загрузка <br>мастеров</a>
             </p>
             <p>
-                <a class='button' href="#">Прайс-лист <br>&nbsp;</a>
-                <a class='button' href="#">Популярность <br>услуг</a>
+                <a class='button' href="/report_price">Прайс-лист <br>&nbsp;</a>
+                <a class='button' href="/report_services_popular">Популярность <br>услуг</a>
             </p>
             <p>
-                <a class='button' href="#">Вип-клиенты</a>
-                <a class='button' href="#">Сводка <br>по скидкам</a>
+                <a class='button' href="/report_clients_vip">Вип-клиенты</a>
+                <a class='button' href="/report_discount_sum">Сводка <br>по скидкам</a>
             </p>
 
         </div>
